<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.gosu-lang.gosu</groupId>
        <artifactId>gosu-parent</artifactId>
        <version>1.17.5</version>
        <relativePath>../gosu-parent/pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <name>Gosu :: Benchmark</name>
    <artifactId>gosu-benchmark</artifactId>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jmh.version>1.37</jmh.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>systems.manifold</groupId>
            <artifactId>manifold</artifactId>
            <version>2022.1.33</version>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>${jmh.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>${jmh.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.gosu-lang.gosu</groupId>
            <artifactId>gosu-core-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.gosu-lang.gosu</groupId>
            <artifactId>gosu-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.gosu-lang.gosu</groupId>
            <artifactId>gosu-doc</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.gosu-lang.gosu</groupId>
            <artifactId>gosu-test-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.gosu-lang.gosu.managed</groupId>
            <artifactId>gw-asm-all</artifactId>
            <version>9.2</version>
        </dependency>
        <dependency>
            <groupId>org.gosu-lang.gosu.managed</groupId>
            <artifactId>gw-jcommander</artifactId>
            <version>1.72</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- plugin that executes a shell script -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>generate-benchmarking-classes</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>pwsh</executable>
                            <arguments>
                                <argument>-noprofile</argument>
                                <argument>-noninteractive</argument>
                                <argument>generateScripts.ps1</argument>
                                <argument>${project.basedir}/../</argument>
                                <argument>${project.basedir}/src/main/resources/</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>parse-version</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>parse-version</goal>
                        </goals>
                        <configuration>
                            <propertyPrefix>gosu</propertyPrefix>
                            <versionString>${project.version}</versionString>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Contains-Sources>gs,gsx</Contains-Sources>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>